<resources>
    <string name="app_name">FinalProject</string>
    <string name="oil_well_maintainer">Oil Well Maintainer</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="register_user">Register</string>
    <string name="email_format">Please enter a valid Email format</string>
    <string name="password_empty">Password cannot be empty</string>
    <string name="password_validation_error">Password must be at least 8 characters and contain one number and one of the following special characters "!@#$%^&amp;()+="</string>
    <string name="verify_email">Please verify email and login</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="register">Register</string>
    <string name="registration_email">Registration Email Resent</string>
    <string name="enter_email_address">Please enter your email address</string>
    <string name="check_inbox">Please check your inbox for the email.</string>
    <string name="error_signOn">Error while handling your request. Please try again.</string>
    <string name="verify_email_first">Please verify your email first and then login again.</string>
    <string name="please_resolve_email_password_issues">Please Resolve Email/Password Issues</string>
    <string name="registration_successful_please_verify_email">Registration successful, please verify email.</string>
    <string name="error_registering_user_please_try_again">Error registering user, please try again</string>
    <string name="user_already_exists">User already exists</string>
    <string name="title_activity_login2">LoginActivity2</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="web_client_id">263023039499-hm2tja983tbsjt2tcp7fnto1vhie8ocp.apps.googleusercontent.com</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_closed">Close Navigation Drawer</string>
    <string name="home">Home</string>
    <string name="logout">Logout</string>
    <string name="add_new_lease">Add New Lease</string>
    <string name="lease_name">Lease Name</string>
    <string name="lease_description">Lease Description</string>
    <string name="create_new_lease">Create New Lease</string>
    <string name="new_lease_name">New Lease Name</string>
    <string name="new_lease_description">New Lease Description</string>
    <string name="capped">Capped:</string>
    <string name="new_oil_well_name">New Oil Well Name</string>
    <string name="new_oil_well_description">New Oil Well Description</string>
    <string name="create_new_oil_well">Create New Oil Well</string>
    <string name="is_capped">Is Capped</string>
    <string name="create_new_tank">Create New Tank</string>
    <string name="new_tank_name">New Tank Name</string>
    <string name="new_tank_description">New Tank Description</string>
    <string name="create">Create</string>
    <string name="add_new">Add New</string>
    <string name="select_new_entity">Select New Entity:</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="lease_details">Lease Details</string>
    <string name="add_a_new_lease">Add a new Lease</string>
    <string name="loading_content">Loading Content</string>
</resources>